package demo;

// Definerer et interface, som repræsenterer en kontrakt
interface Payment {
    void makePayment(double amount); // Metode erklæret i kontrakten
}
